fixed name of logo image

--- a/shiny/styles.css
+++ b/shiny/styles.css
@@ -78,7 +78,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .navbar {
     margin-bottom: 10px;
 }
-.tccc-logo { 
+.dm-logo { 
     margin-right: 20px; 
     margin-top: -8px; 
     max-width: 170px;
