--- a/datamaps.css
+++ b/datamaps.css
@@ -78,13 +78,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .navbar {
     margin-bottom: 10px;
 }
-.datamaps-logo { 
-    margin-right: 20px; 
-    margin-top: -8px; 
-    max-width: 170px;
-    max-height: 40px;
-    width: 170px;
-    height: 40px;
+.logo { 
+    margin-right: 10px; 
+    margin-top:  -22px; 
+    max-width:  60px;
+    max-height: 60px;
+    width:  60px;
+    height: 60px;
 }
 nav .container:first-child {
     margin-left:104px; 
